[workspace]
members = [
    "minting",
    "burning",
    "oracle",
    "reserve_tracker",
    "shared",
]
resolver = "2"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols

[profile.release-with-logs]
inherits = "release"
debug = true
