[workspace]
members = [
    "acbu_minting",
    "acbu_burning",
    "acbu_oracle",
    "acbu_reserve_tracker",
    "acbu_savings_vault",
    "acbu_lending_pool",
    "acbu_escrow",
    "shared", "dummy_token",
]
resolver = "2"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols

[profile.release-with-logs]
inherits = "release"
debug = true
