[package]
name = "acbu_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = "21.0.0"
soroban-token-contract = "21.0.0"
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
soroban-token-contract = { version = "21.0.0", features = ["testutils"] }
